benchmark/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aerospike-benchmark
  namespace: mona-adagent
  labels:
    app: aerospike-benchmark
spec:
  type: ClusterIP
  selector:
    app: aerospike-benchmark
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
