benchmark/deploy/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aerospike-benchmark-httproute
  namespace: mona-adagent
  labels:
    app: aerospike-benchmark
spec:
  hostnames:
    - aerospike-benchmark.svc.mona.navercorp.com
  parentRefs:
    - name: main
      namespace: gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: aerospike-benchmark
          port: 80
